--- a/styles.css
+++ b/styles.css
@@ -338,7 +338,6 @@ header {
 
 .about-me__img {
   box-shadow: var(--bs);
-  max-width: 240px;
 }
 
 @media (min-width: 600px) {
@@ -369,7 +368,7 @@ header {
     grid-area: img;
     position: relative;
     z-index: 2;
-    max-width: 270px;
+    margin-top: 40px;
   }
 }
 
